frontend/sass/utils/_academic.sass
@use './mixins' as mix
@use '../colors/colors' as color

.timeline-container
    padding: 1em
    
    .timeline-item
        z-index: 1
        inline-size: 100%

        input[type = "range"].timeline-input
            inline-size: 100%

    .timeline-active
        opacity: 1 !important
        @include mix.transitions(opacity, 3s, ease-out)
        
    .timeline-h3
        font-size: 1.5em
        font-weight: 600
        margin-block: .5em
        text-align: center

    .timeline-content
        opacity: 0
        padding: 1em
        block-size: 100%
        max-inline-size: 22em
        @include mix.component-color($color: color.$acent-3, $background-color: color.$acent-3-card)
        &:active
            opacity: 1
            @include mix.transitions(opacity, 3s, ease-out)

        .timeline-h4
            font-size: 1.2em
            font-weight: 600
            margin-block: .5em
            text-align: center
            display: inline-block

        p
            font-size: 1.1em
            text-align: center
    
        .tech-container
            .tech-item
                margin-inline:.5em

        .timeline-description
            .timeline-list
                .timeline-item
                    margin-block: .5em
                    font-size: 1.1em

.timeline-line
    @include mix.media-queries ($size: 'XL')
        &::before
            top: 2.2em
            content: ""
            left: 44em
            inline-size: .1em
            position: relative
            background-color: red
            transform: scaleX(14.1) rotate(90deg)

.component-blue
    @include mix.component-color($color: color.$primary, $background-color: color.$acent-3)

